--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "nodexpress",
+  "name": "nodexpresswebsite",
   "version": "1.0.0",
   "repository": "https://github.com/silverfang94/NodeExpress.git",
   "license": "MIT",
   "scripts": {
-    "start": "gulp",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "gullp": "gulp"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
@@ -25,7 +26,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cross-env": "^5.2.0",
+    "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "gulp-concat": "^2.6.1",
