--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": "^8.12.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
