Project checking and description adding

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 #Dev settings in nodemon.json
 
 #Enviroment
-NODE_ENV=
+NODE_ENV=production
 
 #Port
-PORT=
+PORT=8080
 
-#Db
+#Db (Your Mongo URL)
 MONGO_URL=
 
-#Security
+#Security (can be everything)
 SESSION_SECRET=
 
 #Posts per page
