--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodexpresswebsite",
+  "name": "node-express-website",
   "version": "1.0.0",
   "repository": "https://github.com/silverfang94/NodeExpress.git",
   "license": "MIT",
@@ -20,9 +20,6 @@
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.2",
     "nodemon": "^1.18.4"
-  },
-  "engines": {
-    "node": "^8.12.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
